--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <div class="single-team-member">
               <div class="team-img ">
                 <a href="#">
-                  <img src="D:\Field Marshal SCM Updated Website\assets\Team Members\Paras.png" alt="">
+                  <img src="https://github.com/rkjr25/FMSCM/blob/main/Paras.png" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
@@ -362,7 +362,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <div class="single-team-member">
               <div class="team-img rounded-circle">
                 <a href="#">
-                  <img src="D:\Field Marshal SCM Updated Website\assets\Team Members\Saruchi.png" alt="">
+                  <img src="https://github.com/rkjr25/FMSCM/blob/main/Saruchi.png" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
@@ -385,7 +385,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-                  <img src="D:\Field Marshal SCM Updated Website\assets\Team Members\Subhash.png" alt="">
+                  <img src="https://github.com/rkjr25/FMSCM/blob/main/Shweta.png" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
@@ -443,7 +443,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-                  <img src="D:\Field Marshal SCM Updated Website\assets\Team Members\Shweta.png" alt="">
+                  <img src="https://github.com/rkjr25/FMSCM/blob/main/Subhash.png" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
@@ -466,7 +466,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <div class="single-team-member">
               <div class="team-img">
                 <a href="https://www.linkedin.com/in/prajakta-chaudhari-61010221b/" target="_blank">
-                  <img src="D:\Field Marshal SCM Updated Website\assets\Team Members\Prajkta.png" alt="">
+                  <img src="https://github.com/rkjr25/FMSCM/blob/main/Prajkta.png" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
@@ -489,7 +489,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-                  <img src="D:\Field Marshal SCM Updated Website\assets\Team Members\Dheerja.png" alt="">
+                  <img src="https://github.com/rkjr25/FMSCM/blob/main/Dheerja.png" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
