--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
-
+<p class="p-500 text-center ty">BETA VERSION</p>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex">
